attempt to fix hr styling on safari ios

--- a/styles.css
+++ b/styles.css
@@ -229,6 +229,7 @@ hr {
   color: var(--nav-background);
   width: 80%;
   margin: 0 auto var(--space-sm);
+  border: 1px solid var(--nav-background);
 }
 
 h2,
